--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{836BFF92-5425-4912-A060-1BDD6DB4F897}</ProjectGuid>
+    <ProjectGuid>{48BE9D35-1C77-4CDA-858F-40D6C6D07B1C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SoundPlayer</RootNamespace>
-    <AssemblyName>SoundPlayer</AssemblyName>
+    <RootNamespace>BL</RootNamespace>
+    <AssemblyName>BL</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NAudio.1.8.4\lib\net35\NAudio.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive, Version=4.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
@@ -51,23 +47,26 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\ISoundPlayer.cs" />
-    <Compile Include="Concrete\DirectXSoundPlayer.cs" />
-    <Compile Include="Concrete\NAudioSoundPlayer.cs" />
-    <Compile Include="Converters\IFileNameConverter.cs" />
-    <Compile Include="Model\SoundMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="SoundPlayerConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Libs\Libs.csproj">
       <Project>{68ea08f3-8f87-40f0-ae17-f57160b1adf5}</Project>
       <Name>Libs</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SoundPlayer\SoundPlayer.csproj">
+      <Project>{836bff92-5425-4912-a060-1bdd6db4f897}</Project>
+      <Name>SoundPlayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SoundQueue\SoundQueue.csproj">
+      <Project>{7cfddcf3-074c-4a80-9197-76dbfd256cc3}</Project>
+      <Name>SoundQueue</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
