--- a/src/Ui/Ui.csproj
+++ b/src/Ui/Ui.csproj
@@ -42,6 +42,11 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Reactive, Version=4.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reactive.4.0.0\lib\net46\System.Reactive.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +56,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainForm.cs">
@@ -73,6 +79,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -87,16 +94,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BL\BL.csproj">
+      <Project>{48be9d35-1c77-4cda-858f-40d6c6d07b1c}</Project>
+      <Name>BL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Libs\Libs.csproj">
       <Project>{68ea08f3-8f87-40f0-ae17-f57160b1adf5}</Project>
       <Name>Libs</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SoundPlayer\SoundPlayer.csproj">
-      <Project>{836bff92-5425-4912-a060-1bdd6db4f897}</Project>
-      <Name>SoundPlayer</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SoundQueue\SoundQueue.csproj">
-      <Project>{7cfddcf3-074c-4a80-9197-76dbfd256cc3}</Project>
+      <Project>{7CFDDCF3-074C-4A80-9197-76DBFD256CC3}</Project>
       <Name>SoundQueue</Name>
     </ProjectReference>
   </ItemGroup>
