--- a/src/SoundPlayer/SoundPlayer.csproj
+++ b/src/SoundPlayer/SoundPlayer.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Concrete\DirectXSoundPlayer.cs" />
     <Compile Include="Concrete\NAudioSoundPlayer.cs" />
     <Compile Include="Converters\IFileNameConverter.cs" />
+    <Compile Include="Model\SoundItem.cs" />
     <Compile Include="Model\SoundMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
