--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoundPlayerConsumer.cs" />
+    <Compile Include="SoundQueueConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Libs\Libs.csproj">
