--- a/src/SoundQueue/SoundQueue.csproj
+++ b/src/SoundQueue/SoundQueue.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Abstract\ISoundQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Concrete\SoundQueue.cs" />
+    <Compile Include="RxModel\SoundMessageChangeRx.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Libs\Libs.csproj">
